--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #ffd92d;
   --ifm-color-primary-dark: #e2c028;
   --ifm-color-primary-darker: #cdaf25;
@@ -27,4 +27,12 @@
   --ifm-color-primary-lighter: #ffe36f;
   --ifm-color-primary-lightest: #ffeda7;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.ace_gutter {
+  background: transparent !important;
+}
+
+.default-font {
+  font-family: var(--ifm-font-family-base);
 }
