--- a/docs/src/pages/playground.css
+++ b/docs/src/pages/playground.css
@@ -216,3 +216,26 @@ form {
 .editor-plus-run {
   flex: 1;
 }
+
+.warning-message {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  font-size: 1.3em;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 100;
+}
+
+/* This will only apply when the max width is 768px (tablet and below) */
+@media only screen and (max-width: 768px) {
+    .warning-message {
+        display: block;
+    }
+}
